# ai-tools-zoomcamp-assignments

./: .gitignore
01-todo/: .gitignore  db.sqlite3
01-todo/templates/: base.html  home.html
01-todo/todo_app/: models.py  tests.py  views.py
01-todo/todo_app/migrations/: 0001_initial.py  0002_alter_task_due_date.py
01-todo/todo_app/templates/todo_app/: index.html
01-todo/todo_project/: settings.py  urls.py
02-collab-app/: pyproject.toml
02-collab-app/src/app_backend/: main.py  models.py  openapi_export.py
02-collab-app/src/app_frontend/: api_client.py
02-collab-app/src/app_shared/: code_execution.py  config.py
02-collab-app/tests/: test_backend_api.py  test_backend_store.py  test_collab_state.py  test_integration_client_server.py
02-interview-app/: openapi.json  pyproject.toml
02-interview-app/src/app_backend/: store.py
02-interview-app/src/app_frontend/: collab_state.py  main.py
02-interview-app/tests/: test_backend_websocket.py  test_openapi_schema.py
