[project]
name = "interview-app"
version = "0.1.0"
description = "Collaborative browser-based coding app with Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pygments>=2.19.2",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "streamlit-ace>=0.1.1",
    "streamlit-monaco>=0.1.3",
    "uvicorn[standard]>=0.38.0",
]
# [tool.uv.scripts]
# dev-streamlit = "streamlit run src/app_frontend/main.py"
# dev-api = "uvicorn app_backend.main:app --reload"
# tests = "pytest"